Modify playbook for crowdstrike service start

--- a/tasks/crowdstrike_running_linux.yml
+++ b/tasks/crowdstrike_running_linux.yml
@@ -1,50 +1,31 @@
----
-# Check init system of the Linux machine
-- name: Check init system being used
-  command: systemctl --version
-  ignore_errors: true
-  register: init_system_check
-  tags: start
+# This playbook is used to start the CrowdStrike service on Linux systems
+- name: Gather service facts
+  service_facts:
+  register: service_facts
+  tags: install
 
+# Start CrowdStrike Service
 - name: Start CrowdStrike Service
   block:
-    - name: Start Crowdstrike Service when init system is SysVinit i.e not Systemd
-      command: service {{ linux_crowdstrike_service_name }} start
-      when: init_system_check.rc != 0
-      register: service_started
-
-    - name: Start Crowdstrike Service when init system is Systemd
-      command: systemctl start {{ linux_crowdstrike_service_name }}
-      when: init_system_check.rc == 0
-      register: service_started
-  when: init_system_check
+  - name: Enable and Restart CrowdStrike Service
+    service:
+      name: "{{ linux_crowdstrike_service_name }}"
+      enabled: true
+      state: restarted
+    register: service_started
+    # when: service_facts.ansible_facts.services[linux_cs_service].state == "stopped"
+  when: service_facts is defined
   tags: start
 
-- name: Validate Service started
-  assert:
-    that:
-      - service_started.state == "running" and service_started.changed == true
-    fail_msg: "Crowdstrike service fails to start"
-    success_msg: "Crowdstrike service successfully started"
-  ignore_errors: true
-  register: service_started_result
-  when: service_started is defined
-  tags: start
+  rescue:
+  - name: Write error message to stdout
+    debug:
+      msg: "Failed to start CrowdStrike Service"
+    tags: start
 
-- name: Set fact based on CrowdStrike Service start failure
-  set_fact:
-    crowdstrike_service_start_status: "Crowdstrike service fails to start"
-  when: service_started_result.failed == true
-  tags: start
-
-- name: Set fact based on CrowdStrike Service start success
-  set_fact:
-    crowdstrike_service_start_status: "Crowdstrike service successfully started"
-  when: service_started_result.failed == false
-  tags: start
-
+# Write service start status to stdout
 - name: Write CrowdStrike Service start status to stdout
   debug:
-    var: crowdstrike_service_start_status
-  when: crowdstrike_service_start_status is defined
+    msg: "crowdstrike_running: {{ service_started.changed | default(false) }}"
+  when: service_started is defined
   tags: start
